--- a/elasticms-admin/composer.json
+++ b/elasticms-admin/composer.json
@@ -1,18 +1,18 @@
 {
   "name": "ems-project/elasticms-admin",
   "description": "A preconfigured elasticms application",
-  "type": "project",
-  "license": "MIT",
   "authors": [
     {
       "name": "EMS Community",
       "homepage": "https://github.com/ems-project/EMSClientHelperBundle/contributors"
     }
   ],
+  "type": "project",
+  "license": "MIT",
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": "^8.1",
+    "php": "^8.2",
     "ext-ctype": "*",
     "ext-gd": "*",
     "ext-iconv": "*",
@@ -20,24 +20,24 @@
     "ext-openssl": "*",
     "ext-tidy": "*",
     "doctrine/annotations": "^1.14",
-    "doctrine/doctrine-bundle": "^2.8",
+    "doctrine/doctrine-bundle": "^2.11",
     "doctrine/doctrine-migrations-bundle": "^3.2",
-    "doctrine/orm": "^2.6",
-    "elasticms/core-bundle": "~5.12.0",
-    "elasticms/admin-ui-bundle": "~5.12.0",
-    "symfony/console": "^5.4",
-    "symfony/dotenv": "^5.4",
-    "symfony/expression-language": "^6.2",
-    "symfony/flex": "^1.6",
-    "symfony/form": "^5.4",
-    "symfony/framework-bundle": "^5.4",
-    "symfony/mailer": "^5.4",
+    "doctrine/orm": "^2.17",
+    "elasticms/core-bundle": "~6.0.0",
+    "elasticms/admin-ui-bundle": "~6.0.0",
+    "symfony/console": "^6.4",
+    "symfony/dotenv": "^6.4",
+    "symfony/expression-language": "^6.4",
+    "symfony/flex": "^2.4",
+    "symfony/form": "^6.4",
+    "symfony/framework-bundle": "^6.4",
+    "symfony/mailer": "^6.4",
     "symfony/monolog-bundle": "^3.8",
-    "symfony/runtime": "^5.4",
-    "symfony/security-bundle": "^5.4",
-    "symfony/twig-bundle": "^5.4",
-    "symfony/var-exporter": "^5.4",
-    "symfony/web-link": "^5.4"
+    "symfony/runtime": "^6.4",
+    "symfony/security-bundle": "^6.4",
+    "symfony/twig-bundle": "^6.4",
+    "symfony/var-exporter": "^6.4",
+    "symfony/web-link": "^6.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
@@ -88,9 +88,9 @@
       "@auto-scripts"
     ],
     "phpcs": "php-cs-fixer fix",
-    "phpstan": "phpstan analyse",
+    "phpstan": "phpstan analyse --memory-limit 1G",
     "phpunit": "phpunit",
-    "phpall": "phpunit && php-cs-fixer fix && phpstan analyse"
+    "phpall": "php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G"
   },
   "conflict": {
     "symfony/symfony": "*"
@@ -98,7 +98,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "^5.4"
+      "require": "^6.4"
     }
   }
 }
