--- a/elasticms-admin/config/packages/framework.yaml
+++ b/elasticms-admin/config/packages/framework.yaml
@@ -9,6 +9,8 @@ framework:
     session:
         handler_id: ~
         storage_factory_id: session.storage.factory.native
+        cookie_secure: auto
+        cookie_samesite: strict
 
     esi: true
     fragments: true
@@ -18,6 +20,8 @@ framework:
     validation:
         email_validation_mode: html5
 
+    http_method_override: false
+    handle_all_throwables: true
 when@redis:
     framework:
         session:
