--- a/elasticms-admin/config/packages/twig.yaml
+++ b/elasticms-admin/config/packages/twig.yaml
@@ -2,9 +2,11 @@ parameters:
   env(EMS_HASH_ALGO): 'sha1'
 
 twig:
-    debug: '%kernel.debug%'
-    strict_variables: '%kernel.debug%'
-    auto_reload: true
-    exception_controller: null
-    globals:
-      ems_hash_algo: '%env(string:EMS_HASH_ALGO)%'
+  debug: '%kernel.debug%'
+  strict_variables: '%kernel.debug%'
+  auto_reload: true
+  exception_controller: null
+  globals:
+    ems_hash_algo: '%env(string:EMS_HASH_ALGO)%'
+twig_component:
+  anonymous_template_directory: 'components'
