--- a/EMS/admin-ui-bundle/composer.json
+++ b/EMS/admin-ui-bundle/composer.json
@@ -15,8 +15,8 @@
 		}
 	],
 	"require" : {
-		"php": "^8.1",
-		"elasticms/core-bundle": "~5.12.0"
+		"php": "^8.2",
+		"elasticms/core-bundle": "6.0.*"
 	},
 	"autoload" : {
 		"psr-4" : {
