--- a/EMS/client-helper-bundle/composer.json
+++ b/EMS/client-helper-bundle/composer.json
@@ -13,19 +13,19 @@
 		}
 	],
 	"require" : {
-		"php": "^8.1",
-		"composer/ca-bundle": "^1.1",
-		"elasticms/common-bundle": "~5.12.0",
+		"php": "^8.2",
+		"composer/ca-bundle": "^1.4",
+		"elasticms/common-bundle": "6.0.*",
 		"onelogin/php-saml": "^4.1",
-		"symfony-cmf/routing": "^2.3",
-		"symfony/asset": "^5.4",
-		"symfony/console": "^5.4",
-		"symfony/event-dispatcher": "^5.4",
-		"symfony/mime": "^5.4",
-		"symfony/security-bundle": "^5.4",
-		"symfony/security-csrf": "^5.4",
-		"symfony/twig-bundle": "^5.4",
-		"symfony/yaml": "^5.4"
+		"symfony-cmf/routing": "^3.0",
+		"symfony/asset": "6.4.*",
+		"symfony/console": "6.4.*",
+		"symfony/event-dispatcher": "6.4.*",
+		"symfony/mime": "6.4.*",
+		"symfony/security-bundle": "6.4.*",
+		"symfony/security-csrf": "6.4.*",
+		"symfony/twig-bundle": "6.4.*",
+		"symfony/yaml": "6.4.*"
 	},
 	"require-dev" : {
 		"symfony/test-pack": "^1.0"
