--- a/EMS/form-bundle/composer.json
+++ b/EMS/form-bundle/composer.json
@@ -13,14 +13,14 @@
 		}
 	],
 	"require" : {
-		"php": "^8.1",
-		"elasticms/client-helper-bundle": "~5.12.0",
-		"giggsey/libphonenumber-for-php": "^8.12",
-		"symfony/form": "^5.4",
-		"symfony/intl": "^5.4",
-		"symfony/security-csrf": "^5.4",
-		"symfony/twig-bundle": "^5.4",
-		"symfony/validator": "^5.4"
+		"php": "^8.2",
+		"elasticms/client-helper-bundle": "6.0.*",
+		"giggsey/libphonenumber-for-php": "^8.13",
+		"symfony/form": "6.4.*",
+		"symfony/intl": "6.4.*",
+		"symfony/security-csrf": "6.4.*",
+		"symfony/twig-bundle": "6.4.*",
+		"symfony/validator": "6.4.*"
 	},
 	"require-dev" : {
 		"symfony/test-pack": "^1.0"
