--- a/EMS/helpers/composer.json
+++ b/EMS/helpers/composer.json
@@ -15,16 +15,16 @@
 		}
 	],
 	"require" : {
-		"php": "^8.1",
+		"php": "^8.2",
 		"ext-json": "*",
 		"ext-tidy": "*",
-		"symfony/html-sanitizer": "^6.2",
-		"symfony/options-resolver": "^5.4",
-		"symfony/mime": "^5.4"
+		"symfony/html-sanitizer": "6.4.*",
+		"symfony/options-resolver": "6.4.*",
+		"symfony/mime": "6.4.*"
 	},
 	"require-dev" : {
-		"mockery/mockery" : "^0.9",
-		"phpstan/extension-installer": "^1.1"
+		"mockery/mockery" : "^1.6",
+		"phpstan/extension-installer": "^1.3"
 	},
 	"autoload" : {
 		"psr-4" : {
