--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -18,19 +18,19 @@
     "ext-json": "*",
     "ext-sqlite3": "*",
     "doctrine/doctrine-migrations-bundle": "^3.2",
-    "elasticms/common-bundle": "~6.0.0",
+    "elasticms/common-bundle": "6.0.*",
     "kevinrob/guzzle-cache-middleware": "^4.1",
-    "symfony/console": "^6.4",
-    "symfony/css-selector": "^6.4",
-    "symfony/dotenv": "^6.4",
-    "symfony/expression-language": "^6.4",
+    "symfony/console": "6.4.*",
+    "symfony/css-selector": "6.4.*",
+    "symfony/dotenv": "6.4.*",
+    "symfony/expression-language": "6.4.*",
     "symfony/flex": "^2.4",
-    "symfony/framework-bundle": "^6.4",
-    "symfony/http-client": "^6.4",
-    "symfony/property-info": "^6.4",
-    "symfony/runtime": "^6.4",
-    "symfony/var-exporter": "^6.4",
-    "symfony/yaml": "^6.4"
+    "symfony/framework-bundle": "6.4.*",
+    "symfony/http-client": "6.4.*",
+    "symfony/property-info": "6.4.*",
+    "symfony/runtime": "6.4.*",
+    "symfony/var-exporter": "6.4.*",
+    "symfony/yaml": "6.4.*"
   },
   "require-dev": {
     "phpdocumentor/reflection-docblock": "^5.3",
@@ -87,7 +87,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "^6.4"
+      "require": "6.4.*"
     }
   }
 }
