fix(symfony/6.4): remove phpstan from helper and xliff
This is handled by the mono repo like other packages

--- a/EMS/xliff/composer.json
+++ b/EMS/xliff/composer.json
@@ -40,10 +40,7 @@
   },
   "config": {
     "lock": false,
-    "sort-packages": true,
-    "allow-plugins": {
-      "phpstan/extension-installer": true
-    }
+    "sort-packages": true
   },
   "extra": {
     "branch-alias": {
