--- a/EMS/helpers/composer.json
+++ b/EMS/helpers/composer.json
@@ -23,8 +23,7 @@
     "symfony/mime": "6.4.*"
   },
   "require-dev": {
-    "mockery/mockery": "^1.6",
-    "phpstan/extension-installer": "^1.3"
+    "mockery/mockery": "^1.6"
   },
   "autoload": {
     "psr-4": {
@@ -41,10 +40,7 @@
   },
   "config": {
     "lock": false,
-    "sort-packages": true,
-    "allow-plugins": {
-      "phpstan/extension-installer": true
-    }
+    "sort-packages": true
   },
   "extra": {
     "branch-alias": {
