--- a/elasticms-cli/config/packages/doctrine.yaml
+++ b/elasticms-cli/config/packages/doctrine.yaml
@@ -8,8 +8,9 @@ doctrine:
         server_version: '%env(resolve:DB_SERVER_VERSION)%'
     orm:
         auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
+        enable_lazy_ghost_objects: true
+        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         mappings:
             App:
               is_bundle: false
