--- a/EMS/helpers/composer.json
+++ b/EMS/helpers/composer.json
@@ -1,57 +1,53 @@
 {
-	"name" : "elasticms/helpers",
-	"description" : "Enclose and simplify regular PHP functions in PHPStan compliant functions",
-	"type" : "library",
-	"keywords" : [
-		"php",
-		"phpstan",
-		"helpers"
-	],
-	"license" : "MIT",
-	"authors" : [
-		{
-			"name" : "EMS Community",
-			"homepage" : "https://github.com/ems-project/helpers/contributors"
-		}
-	],
-	"require" : {
-		"php": "^8.1",
-		"ext-json": "*",
-		"ext-tidy": "*",
-		"symfony/html-sanitizer": "^6.2",
-		"symfony/options-resolver": "^5.4",
-		"symfony/mime": "^5.4"
-	},
-	"require-dev" : {
-		"mockery/mockery" : "^0.9",
-		"phpstan/extension-installer": "^1.1"
-	},
-	"autoload" : {
-		"psr-4" : {
-			"EMS\\Helpers\\" : "src/"
-		},
-		"exclude-from-classmap" : [
-			"tests/"
-		]
-	},
-	"autoload-dev" : {
-		"psr-4" : {
-			"EMS\\Helpers\\Tests\\" : "tests/"
-		}
-	},
-	"config": {
-		"lock": false,
-		"sort-packages": true,
-		"allow-plugins": {
-			"phpstan/extension-installer": true
-		}
-	},
-	"extra" : {
-		"branch-alias" : {
-			"dev-master" : "0.1-dev"
-		}
-	},
-	"scripts": {
-		"phpunit":  "phpunit"
-	}
+  "name": "elasticms/helpers",
+  "description": "Enclose and simplify regular PHP functions in PHPStan compliant functions",
+  "type": "library",
+  "keywords": [
+    "php",
+    "phpstan",
+    "helpers"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "EMS Community",
+      "homepage": "https://github.com/ems-project/helpers/contributors"
+    }
+  ],
+  "require": {
+    "php": "^8.2",
+    "ext-json": "*",
+    "ext-tidy": "*",
+    "symfony/html-sanitizer": "6.4.*",
+    "symfony/options-resolver": "6.4.*",
+    "symfony/mime": "6.4.*"
+  },
+  "require-dev": {
+    "mockery/mockery": "^1.6"
+  },
+  "autoload": {
+    "psr-4": {
+      "EMS\\Helpers\\": "src/"
+    },
+    "exclude-from-classmap": [
+      "tests/"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "EMS\\Helpers\\Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "lock": false,
+    "sort-packages": true
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.1-dev"
+    }
+  },
+  "scripts": {
+    "phpunit": "phpunit"
+  }
 }
