--- a/composer.json
+++ b/composer.json
@@ -55,53 +55,52 @@
     "sensio/framework-extra-bundle": "^6.2",
     "sensiolabs/ansi-to-html": "^1.2",
     "symfony-cmf/routing": "^3.0",
-    "symfony/asset": "^6.4",
-    "symfony/cache": "^6.4",
-    "symfony/config": "^6.4",
-    "symfony/console": "^6.4",
-    "symfony/css-selector": "^6.4",
-    "symfony/dependency-injection": "^6.4",
-    "symfony/dom-crawler": "^6.4",
-    "symfony/dotenv": "^6.4",
-    "symfony/error-handler": "^6.4",
-    "symfony/event-dispatcher": "^6.4",
-    "symfony/expression-language": "^6.4",
-    "symfony/filesystem": "^6.4",
-    "symfony/finder": "^6.4",
+    "symfony/asset": "6.4.*",
+    "symfony/cache": "6.4.*",
+    "symfony/config": "6.4.*",
+    "symfony/console": "6.4.*",
+    "symfony/dependency-injection": "6.4.*",
+    "symfony/dom-crawler": "6.4.*",
+    "symfony/dotenv": "6.4.*",
+    "symfony/error-handler": "6.4.*",
+    "symfony/event-dispatcher": "6.4.*",
+    "symfony/expression-language": "6.4.*",
+    "symfony/filesystem": "6.4.*",
+    "symfony/finder": "6.4.*",
     "symfony/flex": "^2.4",
-    "symfony/form": "^6.4",
-    "symfony/framework-bundle": "^6.4",
-    "symfony/html-sanitizer": "^6.4",
-    "symfony/http-client": "^6.4",
-    "symfony/http-foundation": "^6.4",
-    "symfony/intl": "^6.4",
-    "symfony/ldap": "^6.4",
-    "symfony/mailer": "^6.4",
-    "symfony/mime": "^6.4",
-    "symfony/monolog-bridge": "^6.4",
+    "symfony/form": "6.4.*",
+    "symfony/framework-bundle": "6.4.*",
+    "symfony/html-sanitizer": "6.4.*",
+    "symfony/http-client": "6.4.*",
+    "symfony/http-foundation": "6.4.*",
+    "symfony/intl": "6.4.*",
+    "symfony/ldap": "6.4.*",
+    "symfony/mailer": "6.4.*",
+    "symfony/mime": "6.4.*",
+    "symfony/monolog-bridge": "6.4.*",
     "symfony/monolog-bundle": "^3.8",
-    "symfony/options-resolver": "^6.4",
-    "symfony/password-hasher": "^6.4",
-    "symfony/process": "^6.4",
-    "symfony/property-access": "^6.4",
-    "symfony/property-info": "^6.4",
-    "symfony/routing": "^6.4",
-    "symfony/runtime": "^6.4",
-    "symfony/security-bundle": "^6.4",
-    "symfony/security-core": "^6.4",
-    "symfony/security-csrf": "^6.4",
-    "symfony/serializer": "^6.4",
-    "symfony/stopwatch": "^6.4",
-    "symfony/string": "^6.4",
-    "symfony/translation": "^6.4",
-    "symfony/twig-bridge": "^6.4",
-    "symfony/twig-bundle": "^6.4",
+    "symfony/options-resolver": "6.4.*",
+    "symfony/password-hasher": "6.4.*",
+    "symfony/process": "6.4.*",
+    "symfony/property-access": "6.4.*",
+    "symfony/property-info": "6.4.*",
+    "symfony/routing": "6.4.*",
+    "symfony/runtime": "6.4.*",
+    "symfony/security-bundle": "6.4.*",
+    "symfony/security-core": "6.4.*",
+    "symfony/security-csrf": "6.4.*",
+    "symfony/serializer": "6.4.*",
+    "symfony/stopwatch": "6.4.*",
+    "symfony/string": "6.4.*",
+    "symfony/translation": "6.4.*",
+    "symfony/twig-bridge": "6.4.*",
+    "symfony/twig-bundle": "6.4.*",
     "symfony/ux-twig-component": "^2.13",
-    "symfony/validator": "^6.4",
-    "symfony/var-dumper": "^6.4",
-    "symfony/var-exporter": "^6.4",
-    "symfony/web-link": "^6.4",
-    "symfony/yaml": "^6.4",
+    "symfony/validator": "6.4.*",
+    "symfony/var-dumper": "6.4.*",
+    "symfony/var-exporter": "6.4.*",
+    "symfony/web-link": "6.4.*",
+    "symfony/yaml": "6.4.*",
     "twig/cache-extra": "^3.8",
     "twig/cssinliner-extra": "^3.8",
     "twig/extra-bundle": "^3.8",
@@ -127,11 +126,11 @@
     "phpstan/phpstan-symfony": "^1.3",
     "phpunit/phpunit": "^9.5",
     "rector/rector": "^0.18",
-    "symfony/browser-kit": "^6.4",
-    "symfony/debug-bundle": "^6.4",
-    "symfony/phpunit-bridge": "^6.4",
-    "symfony/test-pack": "^1.1",
-    "symfony/web-profiler-bundle": "^6.4",
+    "symfony/css-selector": "6.4.*",
+    "symfony/browser-kit": "6.4.*",
+    "symfony/debug-bundle": "6.4.*",
+    "symfony/phpunit-bridge": "6.4.*",
+    "symfony/web-profiler-bundle": "6.4.*",
     "symplify/monorepo-builder": "^11.2",
     "zalas/phpunit-globals": "^2.6"
   },
@@ -139,7 +138,7 @@
     "sort-packages": true,
     "allow-plugins": {
       "phpstan/extension-installer": true,
-      "symfony/flex": false,
+      "symfony/flex": true,
       "symfony/runtime": true,
       "endroid/installer": false,
       "php-http/discovery": true
@@ -201,12 +200,16 @@
     "phpcs": "php-cs-fixer fix",
     "phpstan": "phpstan analyse --memory-limit 1G",
     "phpunit": "phpunit",
-    "phpall": "php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G"
+    "phpall": "php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G",
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    }
   },
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "^6.4"
+      "require": "6.4.*"
     }
   }
 }
