fix: docker was not starting any more

--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -82,6 +82,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.tika.rule=Host(`tika.localhost`)"
       - "traefik.http.routers.tika.entrypoints=web"
+      - "traefik.http.routers.tika.service=tika"
+      - "traefik.http.services.tika.loadbalancer.server.port=9998"
 
   minio:
     image: minio/minio
