--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -8,6 +8,9 @@ COMPOSE_PROJECT_NAME=ems-mono
 # * os2: OpenSearch 2
 ELK_VERSION=elk7
 
+# Just in order to avoid error messages
+EMS_VERSION=5.13.5
+
 ###> Cluster's variables ###
 # Set the cluster name
 CLUSTER_NAME=ems-cluster
@@ -27,7 +30,7 @@ OS2_STACK_VERSION=2.4.1
 
 ###> ELK8 variables ###
 # Version of Elastic products
-ELK8_STACK_VERSION=8.5.3
+ELK8_STACK_VERSION=8.11.3
 # Set to 'basic' or 'trial' to automatically start the 30-day trial
 ELK8_LICENSE=basic
 #ELK8_LICENSE=trial
