fix: cke5 plugins are not loaded multiple time anymore

--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -6,6 +6,10 @@
     "watch": "webpack --mode=development --watch"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-core": "41.1.0",
+    "@ckeditor/ckeditor5-dev-translations": "^32.1.2",
+    "@ckeditor/ckeditor5-dev-utils": "^32.1.2",
+    "@ckeditor/ckeditor5-theme-lark": "41.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
@@ -17,6 +21,7 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
+    "raw-loader": "^4.0.2",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
@@ -28,12 +33,29 @@
   },
   "dependencies": {
     "@a2lix/symfony-collection": "^0.6.1",
-    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
-    "@ckeditor/ckeditor5-dev-translations": "^39.5.1",
-    "@ckeditor/ckeditor5-dev-utils": "^39.5.1",
-    "@ckeditor/ckeditor5-html-support": "^40.2.0",
-    "@ckeditor/ckeditor5-source-editing": "^40.2.0",
-    "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
+    "@ckeditor/ckeditor5-alignment": "41.1.0",
+    "@ckeditor/ckeditor5-autoformat": "41.1.0",
+    "@ckeditor/ckeditor5-basic-styles": "41.1.0",
+    "@ckeditor/ckeditor5-block-quote": "41.1.0",
+    "@ckeditor/ckeditor5-editor-classic": "41.1.0",
+    "@ckeditor/ckeditor5-essentials": "41.1.0",
+    "@ckeditor/ckeditor5-find-and-replace": "41.1.0",
+    "@ckeditor/ckeditor5-font": "41.1.0",
+    "@ckeditor/ckeditor5-heading": "41.1.0",
+    "@ckeditor/ckeditor5-html-support": "41.1.0",
+    "@ckeditor/ckeditor5-image": "41.1.0",
+    "@ckeditor/ckeditor5-indent": "41.1.0",
+    "@ckeditor/ckeditor5-link": "41.1.0",
+    "@ckeditor/ckeditor5-list": "41.1.0",
+    "@ckeditor/ckeditor5-media-embed": "41.1.0",
+    "@ckeditor/ckeditor5-paragraph": "41.1.0",
+    "@ckeditor/ckeditor5-remove-format": "41.1.0",
+    "@ckeditor/ckeditor5-source-editing": "41.1.0",
+    "@ckeditor/ckeditor5-special-characters": "41.1.0",
+    "@ckeditor/ckeditor5-style": "41.1.0",
+    "@ckeditor/ckeditor5-table": "41.1.0",
+    "@ckeditor/ckeditor5-typing": "41.1.0",
+    "@ckeditor/ckeditor5-undo": "41.1.0",
     "@elasticms/file-uploader": "^1.0.1",
     "@eonasdan/tempus-dominus": "^6.9.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
