refactor(common/twig): flag ems_webalize as deprecated alternative slug (#801)
Co-authored-by: David mattei <d.mattei89@gmail.com>

--- a/elasticms-admin/config/packages/ems_common.yaml
+++ b/elasticms-admin/config/packages/ems_common.yaml
@@ -34,6 +34,7 @@ parameters:
     env(EMS_WEBALIZE_REMOVABLE_REGEX): '/([^a-zA-Z0-9_| \-.''\/])|(\.$)/'
     env(EMS_WEBALIZE_DASHABLE_REGEX): '/[\/| '']+/'
     env(EMS_EXCLUDED_CONTENT_TYPES): '[]'
+    env(EMS_SLUG_SYMBOL_MAP): ~
 
 ems_common:
     hash_algo: '%env(string:EMS_HASH_ALGO)%'
@@ -46,6 +47,7 @@ ems_common:
     backend_api_key: '%env(string:EMS_BACKEND_API_KEY)%'
     backend_api_verify: '%env(bool:EMS_BACKEND_API_VERIFY)%'
     excluded_content_types: '%env(json:EMS_EXCLUDED_CONTENT_TYPES)%'
+    slug_symbol_map: '%env(json:EMS_SLUG_SYMBOL_MAP)%'
     webalize:
         removable_regex: '%env(string:EMS_WEBALIZE_REMOVABLE_REGEX)%'
         dashable_regex: '%env(string:EMS_WEBALIZE_DASHABLE_REGEX)%'
