fix: rename dev.xml to debug.xml
No more _emsf in route names.
In the web in dev mode the _emsf/ routes are still available
In the admin the form routes are prefixed with emsf/ (enable forms in channel and also debug routes)

--- a/elasticms-admin/config/routes.yaml
+++ b/elasticms-admin/config/routes.yaml
@@ -14,3 +14,8 @@ emsch_routes:
 
 forms:
   resource: '@EMSFormBundle/Resources/config/routing/form.xml'
+  prefix: /emsf
+
+forms_debug:
+  resource: '@EMSFormBundle/Resources/config/routing/debug.xml'
+  prefix: /emsf
