docs: update from promo

--- a/demo/configs/admin/content-type/release.json
+++ b/demo/configs/admin/content-type/release.json
@@ -3,8 +3,8 @@
     "arguments": [],
     "properties": {
         "name": "release",
-        "pluralName": "Releases",
-        "singularName": "Release",
+        "pluralName": "Release versions",
+        "singularName": "Release version",
         "icon": "fa fa-dropbox",
         "description": null,
         "indexTwig": null,
