--- a/EMS/client-helper-bundle/composer.json
+++ b/EMS/client-helper-bundle/composer.json
@@ -17,6 +17,7 @@
 		"composer/ca-bundle": "^1.1",
 		"elasticms/common-bundle": "5.15.*",
 		"onelogin/php-saml": "^4.1",
+		"stevenmaguire/oauth2-keycloak": "^5.1",
 		"symfony-cmf/routing": "^2.3",
 		"symfony/asset": "^5.4",
 		"symfony/console": "^5.4",
