--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
     "ruflin/elastica": "^7.2",
     "sensio/framework-extra-bundle": "^6.2",
     "sensiolabs/ansi-to-html": "^1.1",
+    "stevenmaguire/oauth2-keycloak": "^5.1",
     "symfony-cmf/routing": "^2.3",
     "symfony/asset": "^5.4",
     "symfony/cache": "^5.4",
