feat: support for encryption algo & key

--- a/elasticms-web/.env.dist
+++ b/elasticms-web/.env.dist
@@ -65,6 +65,8 @@ EMS_STORE_DATA_SERVICES=[]
 #EMSCH_OAUTH2_CLIENT_SECRET=
 #EMSCH_OAUTH2_REDIRECT_URI=
 #EMSCH_OAUTH2_VERSION=
+#EMSCH_OAUTH2_ENCRYPTION_ALGORITHM=
+#EMSCH_OAUTH2_ENCRYPTION_KEY=
 #EMSCH_SAML=false
 #EMSCH_SAML_IDP_ENTITY_ID=
 #EMSCH_SAML_IDP_PUBLIC_KEY=
